# AgentX

./: .env.example  .gitignore  DESIGN.md  Dockerfile  FIX_EXECUTION_PLAN.md  FIX_PLAN.md  PRODUCT.md  docker-compose.yml
backend/: README.md  demo_check.py  main.py  pyproject.toml
backend/app/: config.py  utils.py
backend/app/agents/: base.py  context.py
backend/app/api/: routes.py
backend/app/graph/: builder.py  edges.py  nodes.py  state.py
backend/app/persistence/: store.py
backend/app/prompts/: __init__.py  evaluator.py  host.py  saboteur.py
backend/app/reports/: pdf_generator.py
backend/app/sandbox/: manager.py
backend/app/tools/: __init__.py  execute_code.py  fetch_challenge.py  inject_bugs.py  run_tests.py  score_round.py
backend/sandbox-images/javascript/: Dockerfile
backend/sandbox-images/python/: Dockerfile
backend/tests/: conftest.py  test_graph.py  test_routes.py  test_tools.py  test_utils.py
docs/: RUNBOOK.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: App.tsx
frontend/app/components/: ChallengeRenderer.tsx  ChatPanel.tsx  CodeEditor.tsx  ScoreDisplay.tsx  TracePanel.tsx  TraceToasts.tsx
frontend/app/hooks/: useStickToBottom.ts  useWebSocket.ts
frontend/app/lib/: api.ts  types.ts
frontend/app/pages/: HomePage.tsx  SessionPage.tsx
frontend/app/stores/: session.ts
frontend/app/styles/: globals.css
scripts/: bootstrap.sh
